# little-walk-api-gateway

./: .env  Cargo.toml
curl/accounts/: login_by_password.curl  login_by_sms_verification_code.curl  send_verification_code.curl  signup.curl  signup.json
curl/dogs/: add_dog.curl  add_dog.json  download_portrait.curl  upload_portrait.curl
curl/walk-request/: nearby-walk-requests.curl
docs/: api-spec.yml
src/: error.rs  main.rs  middlewares.rs
src/auth_clients/: restful.rs
src/clients/: mod.rs
src/clients/auth_clients/: restful.rs
src/clients/dog_clients/: mod.rs  responses.rs  restful.rs
src/clients/sms_verification_code_clients/: restful.rs
src/clients/upload_clients/: restful.rs
src/clients/walk_request_clients/: mod.rs  restful.rs
src/core/: auth_client.rs  common.rs  dog_client.rs  entities.rs  error.rs  mod.rs  requests.rs  service.rs  sms_verification_code_client.rs  upload_client.rs  walk_request_client.rs
src/core/clients/: auth.rs  dog.rs  mod.rs  sms_verification_code.rs  upload.rs  walk_request.rs
src/docs/: api.rs
src/external_apis/: auth.rs  common.rs  mod.rs  sms_verification_code.rs
src/handlers/: account.rs  common.rs  dog.rs  error.rs  mod.rs  walk_request.rs
src/middlewares/: auth.rs
src/upload_clients/: mod.rs  restful.rs
src/utils/: io.rs  mod.rs  restful.rs
