[package]
name = "little-walk-api-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
dotenv = "0.15.0"
env_logger = "0.10.0"
nb-from-env = "0.2.0"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
utoipa = { version = "4.0.0", features=["actix_extras"]}
