[package]
name = "little-walk-api-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.4.0"
anyhow = "1.0.75"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.29"
http = "1.0.0"
nb-from-env = "0.2.0"
nb-serde-query = "0.2.1"
reqwest = { version = "0.11.22", features = ["stream", "multipart"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
url = "2.4.1"
utoipa = { version = "4.0.0", features = ["actix_extras"] }
